# pnq

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.cmd  claude.md  test-arm64.cmd  test-x64.cmd
docs/: cross-platform-plan.md  registry_port_plan.md
include/pnq/: app_init.h  binary_file.h  console.h  directory.h  environment_variables.h  file.h  hosts_file.h  log.h  logging.h  memory_view.h  path.h  platform.h  pnq.h  ref_counted.h  regis3.h  registry.h  string.h  string_expander.h  string_writer.h  text_file.h  unicode.h  version.h  windows_errors.h  wstring.h
include/pnq/config/: config_backend.h  section.h  toml_backend.h  typed_value.h  typed_vector_value.h  value_interface.h
include/pnq/regis3/: exporter.h  importer.h  iterators.h  key.h  key_entry.h  parser.h  types.h  value.h
include/pnq/registry/: exporter.h  importer.h  iterators.h  key.h  key_entry.h  parser.h  types.h  value.h
include/pnq/sqlite/: database.h  sqlite.h  statement.h  transaction.h
include/pnq/win32/: critical_section.h  event_semaphore.h  handle.h  security_attributes.h  service.h  wstr_param.h
temp/: abstract_parser.h
temp/registry/: key.cpp  key.h  key_entry.cpp  key_entry.h  key_enumerator.h  key_iterator.h  regfile.cpp  regfile.h  regfile_export_options.cpp  regfile_export_options.h  regfile_exporter.cpp  regfile_exporter.h  regfile_import_options.cpp  regfile_import_options.h  regfile_importer.cpp  regfile_importer.h  regfile_parser.cpp  regfile_parser.h  value.cpp  value.h  value_enumerator.h  value_iterator.h
tests/: CMakeLists.txt  test_main.cpp
